dev: identity authentication
