# apps/swagger/swagger.yaml
@@ -4,6 +4,9 @@ definitions:
       authCode:
         example: "1234"
         type: string
+      authCodeId:
+        example: J4HGcl1gCLIdPm6T
+        type: string
       authCodeType:
         example: captcha
         type: string
@@ -30,7 +33,28 @@ definitions:
 info:
   contact: {}
 paths:
-  /admin/auth/login:
+  /admin_plat/auth/get-captcha:
+    get:
+      consumes:
+      - application/json
+      description: 获取验证码
+      produces:
+      - application/json
+      responses:
+        "0":
+          description: ""
+          schema:
+            $ref: '#/definitions/helper.Response'
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/helper.Response'
+      security:
+      - ApiKeyAuth: []
+      summary: 获取验证码
+      tags:
+      - admin
+  /admin_plat/auth/login:
     post:
       consumes:
       - application/json
@@ -56,7 +80,7 @@ paths:
       summary: 登录
       tags:
       - admin
-  /admin/auth/logout:
+  /admin_plat/auth/logout:
     post:
       consumes:
       - application/json
